--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -18,6 +18,7 @@
   {% render 'card-product', show_vendor: section.settings.show_vendor %}
 {% endcomment %}
 
+
 {{ 'component-rating.css' | asset_url | stylesheet_tag }}
 
 {%- if card_product and card_product != empty -%}
@@ -330,6 +331,9 @@
             </span>
           {%- endif -%}
         </div>
+        {% if settings.enable_color_swatches == true %}
+          {% render 'swatches', product:card_product %}
+        {% endif %}
       </div>
     </div>
   </div>
@@ -376,6 +380,7 @@
             {% render 'price' %}
           </div>
         </div>
+        
       </div>
     </div>
   </div>
