--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -217,7 +217,8 @@
                   <li class="grid__item">
                     {%- case item.object_type -%}
                       {%- when 'product' -%}
-                        {%- capture product_settings -%}{%- if section.settings.product_show_vendor -%}vendor,{%- endif -%}title,price{%- endcapture -%}
+                        {% unless product.handle == "soft-winter-jacket-bundle-product" %}
+                          {%- capture product_settings -%}{%- if section.settings.product_show_vendor -%}vendor,{%- endif -%}title,price{%- endcapture -%}
                         {% render 'card-product',
                           card_product: item,
                           media_aspect_ratio: section.settings.image_ratio,
@@ -226,6 +227,7 @@
                           show_rating: section.settings.show_rating,
                           lazy_load: lazy_load
                         %}
+                        {% endunless %}
                       {%- when 'article' -%}
                         {% render 'article-card',
                           article: item,
