--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -197,6 +197,7 @@
                 </details>
               </div>
             {%- when 'quantity_selector' -%}
+              {% unless product.handle == "soft-winter-jacket-bundle-product" %}
               <div
                 id="Quantity-Form-{{ section.id }}"
                 class="product-form__input product-form__quantity{% if settings.inputs_shadow_vertical_offset != 0 and settings.inputs_shadow_vertical_offset < 0 %} product-form__quantity-top{% endif %}"
@@ -282,6 +283,7 @@
                   {%- endif -%}
                 </div>
               </div>
+            {% endunless %}
             {%- when 'popup' -%}
               <modal-opener
                 class="product-popup-modal__opener no-js-hidden quick-add-hidden"
@@ -308,9 +310,13 @@
               %}
 
             {%- when 'variant_picker' -%}
-              {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
+              {% unless product.handle == "soft-winter-jacket-bundle-product" %}
+                {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
+              {% endunless %}
             {%- when 'buy_buttons' -%}
-              {%- render 'buy-buttons', block: block, product: product, product_form_id: product_form_id, section_id: section.id, show_pickup_availability: true -%}
+              {% unless product.handle == "soft-winter-jacket-bundle-product" %}
+               {%- render 'buy-buttons', block: block, product: product, product_form_id: product_form_id, section_id: section.id, show_pickup_availability: true -%}
+              {% endunless %}
             {%- when 'rating' -%}
               {%- if product.metafields.reviews.rating.value != blank -%}
                 {% liquid
