--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -208,7 +208,47 @@ fieldset.product-form__input .form__label {
   cursor: pointer;
   position: relative;
 }
-
+.sizes-list {
+  /* display: flex; */
+  flex-direction: column;
+}
+.sizes-list{
+  display: flex;
+  height:0px;
+  opacity: 0;
+  transition: 0.3s ease;
+  border: 1px solid #ddd;
+  position: absolute;
+  background-color: #fff;
+  width: 100%;
+  z-index: 9;
+  overflow: hidden;
+}
+.sizes-list.is_visible{
+  opacity: 1;
+  height:auto;
+  max-width: 44rem;
+  overflow:unset;
+  border-radius: 5px;
+}
+legend.selected-size {
+  color: #000;
+  font-size: 12px;
+  cursor: pointer;
+  padding:0.5rem 1rem;
+  border:1px solid #ddd;
+}
+.option-size input[type='radio'] + label{
+  padding:1rem 2rem;
+  border-radius: 0px;
+  text-align: left;
+  border: 0px;
+  margin:0rem;
+}
+.option-size input[type='radio'] + label:hover,
+.option-size input[type='radio']:checked + label:hover{
+  background-color: #f5f5f5!important;
+}
 .product-form__input input[type='radio'] + label:before {
   content: '';
   position: absolute;
@@ -229,10 +269,26 @@ fieldset.product-form__input .form__label {
   background-color: rgb(var(--color-foreground));
   color: rgb(var(--color-background));
 }
+.product-form__input.option-size input[type='radio']:checked + label {
+  background-color: unset;
+  color:unset ;
+}
 
 .product-form__input input[type='radio']:not(.disabled) + label > .visually-hidden {
   display: none;
 }
+.product-form__input input[type='radio'] + label.color-swatch{
+  font-size:0px;
+  width:25px;
+  padding:0rem;
+  height:25px;
+  border-radius:10px;
+  border:1px solid transparent;
+}
+.product-form__input input[type='radio']:checked + label.color-swatch{
+  border-color:#000;
+}
+
 
 @media screen and (forced-colors: active) {
   .product-form__input input[type=radio]:checked + label {
