--- a/snippets/swatches.liquid
+++ b/snippets/swatches.liquid
@@ -69,7 +69,7 @@
       {% endfor %}
     </select>
   {% endif %}
-   <button class="add__to-bag button">
+   <button class="add__to-bag ">
     ADD
   </button>
   </div>
