--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -389,5 +389,18 @@
 .product__sizes select {
   padding: 0.5rem 1rem;
   box-shadow: 0px 0px 2px #0001;
-  border-radius: 5px;
+  border-radius: 0px;
+  width: 50%;
+  height: 30px;
+  border-radius: 5px 0px 0px 5px;
+  cursor: pointer;
+}
+button.add__to-bag{
+  background-color: #000;
+  color: #fff;
+  border: none;
+  padding: 0.75rem 1.25rem;
+  border-radius: 0px 5px 5px 0px;
+  cursor: pointer;
+  outline: 0px;
 }
