--- a/sections/predictive-search.liquid
+++ b/sections/predictive-search.liquid
@@ -78,6 +78,7 @@
               </h2>
               <ul id="predictive-search-results-products-list" class="predictive-search__results-list list-unstyled" role="group" aria-labelledby="predictive-search-products">
                 {%- for product in predictive_search.resources.products -%}
+                  {% unless product.handle != "dark-winter-jacket" or product.handle != "soft-winter-jacket-bundle-product" %}
                   <li id="predictive-search-option-product-{{ forloop.index }}" class="predictive-search__list-item" role="option" aria-selected="false">
                     <a href="{{ product.url }}" class="predictive-search__item predictive-search__item--link-with-thumbnail link link--text" tabindex="-1">
                       {%- if product.featured_media != blank -%}
@@ -96,6 +97,7 @@
                       </div>
                     </a>
                   </li>
+                {% endunless %}
                 {%- endfor -%}
               </ul>
             </div>
