--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -333,10 +333,12 @@
         </div>
        
       </div>
-      {% if settings.enable_color_swatches == true or settings.enable_sizes == true %}
-        {% render 'swatches', product: card_product %}
-      {% endif %}
       
+      {% if settings.enable_color_swatches == true or settings.enable_sizes == true %}
+      <div class="swatches__wrapper">
+        {% render 'swatches', product: card_product %}
+      </div>
+      {% endif %}
     </div>
   </div>
 {%- else -%}
